--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,9 @@ include HISTORY.rst
 include LICENSE
 include README.rst
 
+recursive-include signoffs/templates *
+recursive-include signoffs/static *
+
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
