Improve Process approval transition decorators and logic;  de-lint; V.0.2

--- a/tox.ini
+++ b/tox.ini
@@ -30,3 +30,7 @@ per-file-ignores =
    signoffs/forms.py: F401
    signoffs/models.py: F401
    signoffs/core/models/fields.py: E126
+   signoffs/*/tests/* : E501
+   tests/testapp/tests/* : E501
+   */migrations/*:  E501
+   tests/exampleapp/* : W,E,F
