--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,19 @@
 [tox]
-envlist = py38-dj{32}, flake8
+min_version = 4.0
+envlist = py{37, 38, 39, 310, 311}, flake8
+skipsdist = true
 
 [travis]
 python =
+    3.11: py311
+    3.10: py310
+    3.9: py39
     3.8: py38
+    3.7: py37
+
+[pytest]
+DJANGO_SETTINGS_MODULE = tests.settings
+python_files = tests.py test_*.py *_tests.py
 
 [testenv:flake8]
 basepython = python
@@ -14,14 +24,11 @@ commands = flake8 signoffs tests
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
-    dj32: Django==3.2
-    dj32: django-fsm==2.8.0
-    dj32: persisting-theory==1.0
-    dj32: regex==2022.6.2
-commands = python ./tests/manage.py test
+    -r dev_requirements.txt
+commands = pytest
 
 [flake8]
-max-line-length = 130
+max-line-length = 119
 ignore = F231, W504
 per-file-ignores =
    */__init__.py: F401,
