--- a/tox.ini
+++ b/tox.ini
@@ -1,43 +1,58 @@
+# Tox Configuration
 [tox]
-min_version = 4.0
-envlist = py{37, 38, 39, 310, 311}, flake8
-skipsdist = true
-
-[travis]
-python =
-    3.11: py311
-    3.10: py310
-    3.9: py39
-    3.8: py38
-    3.7: py37
-
-[pytest]
-DJANGO_SETTINGS_MODULE = tests.settings
-python_files = tests.py test_*.py *_tests.py
-
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 signoffs tests
+min_version = 4.0.0
+env_list = python{38, 39, 310, 311}
+labels =
+    test = python{38, 39, 310, 311}, report
+    static = format, lint
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
+description = Run tests with pytest.
 deps =
-    -r dev_requirements.txt
-commands = pytest
+    pytest-django
+    pytest-sugar
+commands = pytest {posargs}
+
+[testenv:report]
+description = Generate test coverage report with pytest-cov.
+deps =
+    pytest-django
+    pytest-cov
+    pytest-sugar
+commands =
+    pytest --cov=signoffs {posargs}
+
+[testenv:format]
+description = Reformat source code with black and isort.
+skip_install = true
+deps =
+    black
+    isort
+commands =
+    black .
+    isort .
+
+[testenv:lint]
+description = Lint source code with flake8.
+skip_install = true
+deps =
+    flake8
+    flake8-bugbear
+commands =
+    flake8 .
+
+# Other Configuration
+[pytest]  # TODO: Update path to Django settings
+DJANGO_SETTINGS_MODULE = django_signoffs.settings
+# -- recommended but optional:
+python_files = tests.py test_*.py *_tests.py
 
 [flake8]
-max-line-length = 119
-ignore = F231, W504
-per-file-ignores =
-   */__init__.py: F401,
-   signoffs/approvals.py: F401
-   signoffs/signoffs.py: F401
-   signoffs/forms.py: F401
-   signoffs/models.py: F401
-   signoffs/core/models/fields.py: E126
-   signoffs/*/tests/* : E501
-   tests/testapp/tests/* : E501
-   */migrations/*:  E501
-   tests/exampleapp/* : W,E,F
+# Flake8 Error Code References:
+# F###, E999, C90#: https://flake8.pycqa.org/en/latest/user/error-codes.html
+# E###, W###: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
+select = C,E,F,W,B,B950
+extend-ignore = E203,E501
+extend-exclude = docs,dist,venv
+max-line-length = 88
+max-complexity = 10
