--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ push = true
 "pyproject.toml" = ['version = "{version}"']
 "README.md" = ['Version: {version}']
 "django_signoffs/__init__.py" = ['__version__ = "{version}"']
-"docs/sphinx/conf.py" = ["release = '{version}'"]
+"docs/sphinx/conf.py" = ["version = '{version}'", "release = '{version}'"]
 
 [tool.black]
 target-version = ["py38","py39","py310","py311"]
