Delete bikeracks_app, move test_app into tests dir, add README for tests

--- a/tox.ini
+++ b/tox.ini
@@ -42,8 +42,8 @@ commands =
     flake8 .
 
 # Other Configuration
-[pytest]  # TODO: Update path to Django settings
-DJANGO_SETTINGS_MODULE = django_signoffs.settings
+[pytest]
+DJANGO_SETTINGS_MODULE = tests.settings
 # -- recommended but optional:
 python_files = tests.py test_*.py *_tests.py
 
