support for django4.x

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,12 @@
 # Tox Configuration
+
 [tox]
 min_version = 4.0.0
 env_list = {py38,py39,py310}-django32,
-           #{py39,py310,py311}-{django41,django42},
+           {py39,py310,py311}-django42,
            format, lint, coverage
 labels =
-    tests = {py38,py39,py310}-django32,
-            #{py39,py310,py311}-{django41,django42},
-            format, lint, coverage
+    tests = {py38,py39,py310}-django32, {py39,py310,py311}-django42, coverage
     static = format, lint
 
 [testenv]
@@ -36,8 +35,8 @@ deps =
     black
     isort
 commands =
-    black --check --diff fmft demo tests {posargs}
-    isort --check --diff fmft demo tests {posargs}
+    black --check --diff signoffs demo tests {posargs}
+    isort --check --diff signoffs demo tests {posargs}
 
 [testenv:lint]
 description = Lint source code with flake8.
@@ -60,8 +59,18 @@ python_files = tests.py test_*.py *_tests.py
 # E###, W###: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
 # B950: leave max line length to black
 # W503 : line break before binary operator - conflicts with black
+# F401 : ignore in API import files
+# C901 : 'Accessor.resolve' is too complex - yes, yes it is.
 select = C,E,F,W,B,B950
 extend-ignore = E203,E501,B950, W503
 extend-exclude = docs,dist,venv,scrapheap
 max-line-length = 88
 max-complexity = 10
+per-file-ignores =
+    */__init__.py: F401,
+    signoffs/approvals.py: F401
+    signoffs/forms.py: F401
+    signoffs/models.py: F401
+    signoffs/process.py: F401
+    signoffs/signoffs.py: F401
+    signoffs/core/utils.py: C901
