fix dev imports

--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,7 @@ deps =
     django42: Django>=4.2,<5.0
     pytest-django
     pytest-sugar
+    django-fsm
 commands = pytest {posargs}
 
 [testenv:coverage]
@@ -25,6 +26,7 @@ deps =
     pytest-django
     pytest-cov
     pytest-sugar
+    django-fsm
 commands =
     pytest --cov=signoffs {posargs}
 
