--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -28,4 +28,4 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-  - requirements: docs/requirements_docs.txt  # TODO: Generate requirements file for docs
+  - requirements: docs/requirements_docs.txt
