--- a/docs/requirements_docs.txt
+++ b/docs/requirements_docs.txt
@@ -8,8 +8,12 @@ alabaster==0.7.13
     # via sphinx
 asgiref==3.7.2
     # via django
+astroid==2.15.6
+    # via sphinx-autodoc2
 babel==2.12.1
     # via sphinx
+beautifulsoup4==4.12.2
+    # via furo
 certifi==2023.7.22
     # via requests
 charset-normalizer==3.2.0
@@ -25,6 +29,8 @@ docutils==0.18.1
     #   myst-parser
     #   sphinx
     #   sphinx-rtd-theme
+furo==2023.9.10
+    # via django-signoffs (pyproject.toml)
 idna==3.4
     # via requests
 imagesize==1.4.1
@@ -35,6 +41,10 @@ jinja2==3.1.2
     # via
     #   myst-parser
     #   sphinx
+lazy-object-proxy==1.9.0
+    # via astroid
+linkify-it-py==2.0.2
+    # via django-signoffs (pyproject.toml)
 markdown-it-py==3.0.0
     # via
     #   mdit-py-plugins
@@ -54,7 +64,9 @@ persisting-theory==1.0
 pprintpp==0.4.0
     # via sphinxcontrib-django
 pygments==2.15.1
-    # via sphinx
+    # via
+    #   furo
+    #   sphinx
 pytz==2023.3
     # via django
 pyyaml==6.0.1
@@ -65,13 +77,21 @@ requests==2.31.0
     # via sphinx
 snowballstemmer==2.2.0
     # via sphinx
+soupsieve==2.5
+    # via beautifulsoup4
 sphinx==6.2.1
     # via
     #   django-signoffs (pyproject.toml)
+    #   furo
     #   myst-parser
+    #   sphinx-basic-ng
     #   sphinx-rtd-theme
     #   sphinxcontrib-django
     #   sphinxcontrib-jquery
+sphinx-autodoc2==0.4.2
+    # via django-signoffs (pyproject.toml)
+sphinx-basic-ng==1.0.0b2
+    # via furo
 sphinx-rtd-theme==1.2.2
     # via django-signoffs (pyproject.toml)
 sphinxcontrib-applehelp==1.0.4
@@ -92,9 +112,18 @@ sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 sqlparse==0.4.4
     # via django
+tomli==2.0.1
+    # via sphinx-autodoc2
 typing-extensions==4.7.1
-    # via asgiref
+    # via
+    #   asgiref
+    #   astroid
+    #   sphinx-autodoc2
+uc-micro-py==1.0.2
+    # via linkify-it-py
 urllib3==2.0.4
     # via requests
+wrapt==1.15.0
+    # via astroid
 zipp==3.16.2
     # via importlib-metadata
