--- a/tox.ini
+++ b/tox.ini
@@ -74,5 +74,6 @@ per-file-ignores =
     signoffs/forms.py: F401
     signoffs/models.py: F401
     signoffs/process.py: F401
+    signoffs/signing_order.py: F401
     signoffs/signoffs.py: F401
     signoffs/core/utils.py: C901
