--- a/tox.ini
+++ b/tox.ini
@@ -76,4 +76,5 @@ per-file-ignores =
     signoffs/process.py: F401
     signoffs/signing_order.py: F401
     signoffs/signoffs.py: F401
+    signoffs/views.py: F401
     signoffs/core/utils.py: C901
