run pytest in parallel (8 workers)

--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,9 @@ deps =
     django42: Django>=4.2,<5.0
     pytest-django
     pytest-sugar
+    pytest-xdist
     django-fsm
-commands = pytest {posargs}
+commands = pytest -n 8 {posargs}
 
 [testenv:coverage]
 description = Generate test coverage report with pytest-cov.
