--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,12 +26,12 @@ dependencies = [
     "django>=3.2,<5.0",
     "persisting-theory",
     "regex",
+    "typing-extensions",
 ]
 
 [project.optional-dependencies]
-fsm = [
-    "django-fsm",
-]
+fsm = ["django-fsm"]
+style = ["ruff"]
 docs = [
     "sphinx",
     "myst-parser",
@@ -39,16 +39,11 @@ docs = [
     "linkify-it-py",
     "sphinxcontrib_django",
     "sphinx-autodoc2",
-]
-style = [
-    "black",
-    "isort",
-    "flake8",
-    "flake8-bugbear",
+    "jinja2",
 ]
 test = [
-    "tox",
     "pytest",
+    "pytest-xdist",
     "pytest-django",
     "pytest-cov",
     "pytest-sugar",
@@ -59,6 +54,7 @@ utils = [
     "build",
     "twine",
     "pip-tools",
+    "tox",
 ]
 
 [project.urls]
@@ -69,14 +65,48 @@ Documentation = "https://django-signoffs.readthedocs.io"
 [project.scripts]
 "manage.py" = "django_signoffs:django_manage"
 
+# <<==================== tools ======================>>
 
-# Other Tools
-[tool.setuptools]
-include-package-data = true  # True by default, declarations in MANIFEST.in
+# <----------------- pytest ------------------->
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "tests.settings"
+python_files = ["tests.py", "test_*.py", "*_tests.py"]
 
-[tool.setuptools.packages.find]
-include = ["signoffs", "signoffs.*"]
+# <----------------- ruff ------------------->
+[tool.ruff]
+fix = false
+extend-exclude = [
+    "docs",
+    "tasks",
+    "scrapheap",
+    "autocreate",
+]
 
+[tool.ruff.lint]
+extend-select = [
+    "B", # flake8-bugbear
+    "I", # isort
+]
+extend-ignore = [
+    "E203",
+    "E501",
+]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
+
+[tool.ruff.lint.per-file-ignores]
+"*/__init__.py"             = ["F401"]
+"signoffs/approvals.py"     = ["F401"]
+"signoffs/forms.py"         = ["F401"]
+"signoffs/models.py"        = ["F401"]
+"signoffs/process.py"       = ["F401"]
+"signoffs/signing_order.py" = ["F401"]
+"signoffs/signoffs.py"      = ["F401"]
+"signoffs/views.py"         = ["F401"]
+"signoffs/core/utils.py"    = ["C901"]
+
+# <---------------- bumpver ----------------->
 [tool.bumpver]
 current_version = "0.3.9"
 version_pattern = "MAJOR.MINOR.PATCH"
@@ -90,9 +120,17 @@ push = true
 "signoffs/__init__.py" = ['__version__ = "{version}"']
 "docs/source/conf.py" = ['version = "{version}"', 'release = "{version}"']
 
-[tool.black]
-target-version = ["py38","py39","py310","py311"]
+# <--------------- setuptools --------------->
+[tool.setuptools]
+include-package-data = true  # True by default, declarations in MANIFEST.in
 
-[tool.isort]
-profile = "black"
-skip_gitignore = true
+[tool.setuptools.packages.find]
+include = ["signoffs", "signoffs.*"]
+
+
+#[tool.black]
+#target-version = ["py38","py39","py310","py311"]
+
+#[tool.isort]
+#profile = "black"
+#skip_gitignore = true
