Updated minimum django version to 4.2

--- a/tox.ini
+++ b/tox.ini
@@ -1,30 +1,29 @@
 [tox]
 env_list =
     clean
-    check-{lint, format}
-    py{39, 310}-django32-test
+    testcov
     py{39, 310, 311}-django42-test
 
 labels =
-    test-all = py{39, 310}-django32-test, py{39, 310, 311, 312}-django42-test
+    test-all = py{39, 310, 311, 312}-django42-test
     check = check-{lint, format}
 
 [testenv]
 description = run tests with pytest (runs in parallel)
 deps =
-    {coverage, cov}: coverage clean
-    {test, coverage, cov}: [test, fsm]
-    django32: django~=3.2
-    django41: django>=4.1,<4.2
+    {test, testcov, clean}: [test, fsm]
     django42: django>=4.2,<5.0
 
 commands =
-    test: pytest -n logical -q
+    clean: coverage clean
+    test: pytest -n logical
+    testcov: pytest -n logical --cov --cov-append
 
-[testenv: check]
-description = run ruff check and format without making changes
-skip_install = true
-deps = [style]
-commands =
-    check-lint: ruff check --ignore-noqa
-    check-format: ruff format --check --respect-gitignore
+
+[testenv: dev]
+description = run `tox -e dev --devenv`
+basepython = python3.9  # TODO - Ensure this matches value in pyproject.toml
+envdir = .venv
+deps = [fsm, style, docs, test, utils]
+usedevelop = true
+commands = # overrides testenv commands to ensure no commands are run
