--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "django_signoffs"
 version = "0.3.9"
-requires-python = ">=3.8, <4.0"
+requires-python = ">=3.9, <4.0"
 description = 'A mico-framework for collecting lightweight, non-crypto "signatures" for virtually anything.'
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -23,7 +23,7 @@ classifiers = [
     "Framework :: Django",
 ]
 dependencies = [
-    "django>=3.2,<5.0",
+    "django>=4.2,<5.0", # can use 3.2 if switch tests to use depr "assertQuerysetEqual" rather than assertQuerySetEqual
     "persisting-theory",
     "regex",
     "typing-extensions",
