--- a/.github/workflows/tox.yaml
+++ b/.github/workflows/tox.yaml
@@ -4,10 +4,13 @@ on:
   push:
     branches:
       - main
+      - master
       - devel
   pull_request:
     branches:
       - main
+      - master
+  workflow_dispatch:
 
 jobs:
   build:
