--- a/.github/workflows/tox.yaml
+++ b/.github/workflows/tox.yaml
@@ -23,6 +23,6 @@ jobs:
       - name: Install Dependencies
         run:
           python -m pip install --upgrade pip
-          # pip install tox
+          pip install tox
       - name: Run Tox in parallel
         run: tox -p
