--- a/.github/workflows/tox.yaml
+++ b/.github/workflows/tox.yaml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Dependencies
-        run:
+        run: |
           python -m pip install --upgrade pip
           pip install tox
       - name: Run Tox in parallel
